--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="lm-item" onclick="playlist.view.latest()">Latest</div>
 				<div class="lm-item" onclick="playlist.view.current()">Current</div>
 				<div class="lm-item" onclick="#">Archive</div>
-				<div class="lm-item" onclick="#">Add</div>
+				<div class="lm-item" onclick="playlist.view.openfile()">Add</div>
 			</div>
 			<div class="date-block">
 				<div class="pl-prev" onclick="playlist.view.prev()"></div>
@@ -22,7 +22,7 @@
 				<div class="pl-calendar"></div>
 				<div class="pl-next" onclick="playlist.view.next()"></div>
 			</div>
-			<div class="pl-upload" title="Add playlist"></div>
+			<div class="pl-upload" title="Add playlist" onclick="playlist.view.openfile()"></div>
 	       <!-- <button id="pl_current" onclick="playlist.view.current()">Current</button>
 	        <button id="pl_latest" onclick="playlist.view.latest()">Latest</button>
 	        <button id="pl_next" onclick="playlist.view.next()">Next</button>
@@ -30,6 +30,7 @@
 	     </div>
 	     <div id="playlist-content" class="list"></div>
 	    </div>
+	    <input type="file" id="pl_file" style="display:none;"/>
 	    <script type="text/javascript" src="jquery.min.3.1.1.js"></script>
 	    <script type="text/javascript" src="moment.min.2.18.1.js"></script>
 	    <script type="text/javascript" src="pl-calendar.js"></script>
