--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 				<div class="lm-item" onclick="playlist.view.current()">Current</div>
 				<div class="lm-item" onclick="#">Archive</div>
 				<div class="lm-item" onclick="playlist.view.openfile()">Add</div>
+				<div class="lm-item" onclick="playlist.view.top100()">Top 100</div>
 			</div>
 			<div class="date-block">
 				<div class="pl-prev" onclick="playlist.view.prev()"></div>
 				<input id="pl_date"></input>
+				<select id="pl_year" style="display:none;"></select>
 				<div class="pl-calendar"></div>
 				<div class="pl-next" onclick="playlist.view.next()"></div>
 			</div>
