--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				<div class="lm-item" onclick="#">Archive</div>
 				<div class="lm-item" onclick="playlist.view.openfile()">Add</div>
 				<div class="lm-item" onclick="playlist.view.top100()">Top 100</div>
+				<div class="lm-item" onclick="playlist.view.top10artists()">Top 10 Artists</div>
 			</div>
 			<div class="date-block">
 				<div class="pl-prev" onclick="playlist.view.prev()"></div>
