--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<link rel="stylesheet" type="text/css" href="playlist2.css?r=3" />
     	<link rel="stylesheet" type="text/css" href="pl-calendar.css" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    	<link rel="icon" href="pl-favicon.png" type="image/png"/>
     </head>
 	<body>
 	    <div class="main-block">
