fix styles add prefixes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
     	<title>Playlist 2</title>
-    	<link rel="stylesheet" type="text/css" href="playlist2.css?r=3" />
-    	<link rel="stylesheet" type="text/css" href="pl-calendar.css" />
+    	<link rel="stylesheet" type="text/css" href="playlist2.css?r=280620171729" />
+    	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=280620171718" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     	<link rel="icon" href="pl-favicon.png" type="image/png"/>
     </head>
