fix calendar issues

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
     	<title>Playlist 2</title>
     	<link rel="stylesheet" type="text/css" href="playlist2.css?r=280620171729" />
-    	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=280620171718" />
+    	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=040720171936" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     	<link rel="icon" href="pl-favicon.png" type="image/png"/>
     </head>
@@ -37,7 +37,7 @@
 	    <input type="file" id="pl_file" style="display:none;"/>
 	    <script type="text/javascript" src="jquery.min.3.1.1.js"></script>
 	    <script type="text/javascript" src="moment.min.2.18.1.js"></script>
-	    <script type="text/javascript" src="pl-calendar.js"></script>
+	    <script type="text/javascript" src="pl-calendar.js?r=040720171937"></script>
 	    <script type="text/javascript" src="playlist.main.js?r=2"></script>
 	    <script type="text/javascript" src="playlist.model.js?r=21"></script>
 	    <script type="text/javascript" src="playlist.view.js?r=2"></script>
