--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	    <script type="text/javascript" src="moment.min.2.18.1.js"></script>
 	    <script type="text/javascript" src="pl-calendar.js?r=040720171937"></script>
 	    <script type="text/javascript" src="playlist.main.js?r=2"></script>
-	    <script type="text/javascript" src="playlist.model.js?r=21"></script>
-	    <script type="text/javascript" src="playlist.view.js?r=2"></script>
+	    <script type="text/javascript" src="playlist.model.js?r=100720171500"></script>
+	    <script type="text/javascript" src="playlist.view.js?r=100720171459"></script>
 	    <script type="text/javascript" src="main.js?r=2"></script>	
 	</body>
 </html>
