add archive menu item

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="left-menu vh-menu">
 				<div class="lm-item" onclick="playlist.view.latest()">Latest</div>
 				<div class="lm-item" onclick="playlist.view.current()">Current</div>
-				<div class="lm-item" onclick="#">Archive</div>
+				<div class="lm-item" onclick="playlist.view.archive()">Archive</div>
 				<div class="lm-item" onclick="playlist.view.openfile()">Add</div>
 				<div class="lm-item" onclick="playlist.view.top100()">Top 100</div>
 				<div class="lm-item" onclick="playlist.view.top10artists()">Top 10 Artists</div>
@@ -40,7 +40,7 @@
 	    <script type="text/javascript" src="pl-calendar.js?r=040720171937"></script>
 	    <script type="text/javascript" src="playlist.main.js?r=2"></script>
 	    <script type="text/javascript" src="playlist.model.js?r=100720171500"></script>
-	    <script type="text/javascript" src="playlist.view.js?r=100720171459"></script>
+	    <script type="text/javascript" src="playlist.view.js?r=100720171512"></script>
 	    <script type="text/javascript" src="main.js?r=2"></script>	
 	</body>
 </html>
