--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     	<title>Playlist 2</title>
     	<link rel="stylesheet" type="text/css" href="playlist2.css?r=280620171729" />
     	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=040720171936" />
-    	<link rel="stylesheet" type="text/css" href="pl-dialog.css?r=100720171901" />
+    	<link rel="stylesheet" type="text/css" href="pl-dialog.css?r=100720172118" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     	<link rel="icon" href="pl-favicon.png" type="image/png"/>
     </head>
@@ -41,7 +41,7 @@
   			<h2 class="dialog__title">Delete playlist</h2>
  			<div class="dialog-password-block">
  				<span class="dialog-password-title">Enter password to delete:</span>
- 				<input class="dialog-password-input" type="password" name="delpassword"/>
+ 				<input class="dialog-password-input" type="text" name="delpassword"/>
  			</div>
   			<button class="dialog__action">Delete &#8594;</button>
 		</div>
