--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    	<title>Playlist 2</title>
+    	<title>Playlist</title>
     	<link rel="stylesheet" type="text/css" href="playlist2.css?r=180720171721" />
     	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=040720171936" />
     	<link rel="stylesheet" type="text/css" href="pl-dialog.css?r=170720171602" />
