--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     	<title>Playlist</title>
     	<link rel="stylesheet" type="text/css" href="playlist2.css?r=310720172120" />
     	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=310720172120" />
-    	<link rel="stylesheet" type="text/css" href="pl-dialog.css?r=310720172120" />
+    	<link rel="stylesheet" type="text/css" href="sweetalert2.min.css" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     	<link rel="icon" href="pl-favicon.png" type="image/png"/>
     </head>
@@ -36,24 +36,14 @@
 	     </div>
 	     <div id="playlist-content" class="list"></div>
 	    </div>
-	    <div class="dialog">
-  			<span class="dialog__close">&#x2715;</span>
-  			<h2 class="dialog__title">Delete playlist</h2>
- 			<div class="dialog-password-block">
- 				<span class="dialog-password-title">Enter password to delete:</span>
- 				<input class="dialog-password-input" type="text" name="delpassword"/>
- 			</div>
-  			<button class="dialog__action">Delete &#8594;</button>
-		</div>
-		<div style="display:none;" class="dialog__trigger"></div>
 	    <input type="file" id="pl_file" style="display:none;"/>
 	    <script type="text/javascript" src="jquery.min.3.1.1.js"></script>
-	    <script type="text/javascript" src="pl-dialog.js?r=100720171857"></script>
 	    <script type="text/javascript" src="moment.min.2.18.1.js"></script>
+	    <script type="text/javascript" src="sweetalert2.min.js"></script>
 	    <script type="text/javascript" src="pl-calendar.js?r=180720172015"></script>
 	    <script type="text/javascript" src="playlist.main.js?r=2"></script>
-	    <script type="text/javascript" src="playlist.model.js?r=170720171621"></script>
-	    <script type="text/javascript" src="playlist.view.js?r=180720172014"></script>
+	    <script type="text/javascript" src="playlist.model.js?r=040920171921"></script>
+	    <script type="text/javascript" src="playlist.view.js?r=040920171853"></script>
 	    <script type="text/javascript" src="main.js?r=2"></script>	
 	</body>
 </html>
