--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
     	<link rel="icon" href="pl-favicon.png" type="image/png"/>
     </head>
 	<body>
-	    <div class="main-block">
+	    <div class="main-block" id="playlist-app">
 	     <div class="header-title">Playlist</div>
 	     <div class="header">
-			<div class="main-menu" onclick="playlist.view.toggleLeftMenu()"></div>
-			<div class="left-menu vh-menu">
-				<div class="lm-item" onclick="playlist.view.latest()">Latest</div>
-				<div class="lm-item" onclick="playlist.view.current()">Current</div>
-				<div class="lm-item" onclick="playlist.view.archive()">Archive</div>
-				<div class="lm-item" onclick="playlist.view.openfile()">Add</div>
-				<div class="lm-item" onclick="playlist.view.top100()">Top 100</div>
-				<div class="lm-item" onclick="playlist.view.top10artists()">Top 10 Artists</div>
+			<div class="main-menu" v-on:click="toggleLeftMenu()"></div>
+			<div class="left-menu" v-if="showLeftMenu">
+				<div class="lm-item" v-on:click="latest()">Latest</div>
+				<div class="lm-item" v-on:click="current()">Current</div>
+				<div class="lm-item" v-on:click="archive()">Archive</div>
+				<div class="lm-item" v-on:click="openfile()">Add</div>
+				<div class="lm-item" v-on:click="top100()">Top 100</div>
+				<div class="lm-item" v-on:click="top10artists()">Top 10 Artists</div>
 				<div class="lm-item delete-menu-item" onclick="playlist.view.show_delete_dialog()">Delete</div>
 			</div>
 			<div class="date-block">
-				<div class="pl-prev" onclick="playlist.view.move('left', playlist.view.prev.bind(playlist.view))"></div>
-				<input id="pl_date"></input>
-				<select id="pl_year" style="display:none;"></select>
+				<div class="pl-prev" v-on:click="move('left')"></div>
+				<input id="pl_date" v-model="formatDate" v-if="mode == 'main'"></input>
+				<select id="pl_year" v-if="mode == 'top100' || mode == 'top10artists'" v-model="top100year" v-on:change="change_year()">
+					<option v-for="year in years_array" :value="year">{{year}}</option>
+				</select>
 				<div class="pl-calendar"></div>
-				<div class="pl-next" onclick="playlist.view.move('right', playlist.view.next.bind(playlist.view))"></div>
+				<div class="pl-next" v-on:click="move('right')"></div>
 			</div>
 			<div class="pl-upload" title="Add playlist" onclick="playlist.view.openfile()"></div>
 	       <!-- <button id="pl_current" onclick="playlist.view.current()">Current</button>
@@ -34,16 +36,68 @@
 	        <button id="pl_next" onclick="playlist.view.next()">Next</button>
 	        <button id="pl_prev" onclick="playlist.view.prev()">Prev</button>-->
 	     </div>
-	     <div id="playlist-content" class="list"></div>
+	     <div id="playlist-content" class="list" v-bind:class="{ list : true, 'pl-loading' : loading}">
+			<template v-if="!loading && storage[actual_date] && mode == 'main'">
+				<div class="list-title">A List</div>
+				<template v-for="item in storage[actual_date]">
+					<div class="list-item" v-if="item.score == 47">
+						<div v-bind:class="['item-info', itemInfoClass(item) ? itemInfoClass(item) : '']"></div>
+						<div class="item-main">
+							<div class="artist" v-html="item.artist"></div>
+							<div class="song" v-html="item.title"></div>
+						</div>
+					</div>
+				</template>
+				<div class="list-title">B List</div>
+				<template v-if="storage[actual_date]" v-for="item in storage[actual_date]">
+					<div class="list-item" v-if="item.score == 28">
+						<div v-bind:class="['item-info', itemInfoClass(item) ? itemInfoClass(item) : '']"></div>
+						<div class="item-main">
+							<div class="artist" v-html="item.artist"></div>
+							<div class="song">{{item.title}}</div>
+						</div>
+					</div>
+				</template>
+				<div class="list-title">C List</div>
+				<template v-if="storage[actual_date]" v-for="item in storage[actual_date]">
+					<div class="list-item" v-if="item.score == 23">
+						<div v-bind:class="['item-info', itemInfoClass(item) ? itemInfoClass(item) : '']"></div>
+						<div class="item-main">
+							<div class="artist" v-html="item.artist"></div>
+							<div class="song" v-html="item.title"></div>
+						</div>
+					</div>
+				</template>
+			</template>
+			<template v-if="!loading && top100_storage[top100year] && mode == 'top100'" v-for="(item, index) in top100_storage[top100year]">
+				<div class="list-item">
+					<div class="item-info top100">{{index + 1}}</div>
+					<div class="item-main">
+						<div class="artist" v-html="item.artist"></div>
+						<div class="song" v-html="item.title"></div>
+					</div>
+					<div class="item-info total">{{item.total}}</div>
+				</div>
+			</template>
+			<template v-if="!loading && top10_storage[top100year] && mode == 'top10artists'" v-for="(item, index) in top10_storage[top100year]">
+				<div class="list-item">
+					<div class="item-info top100">{{index + 1}}</div>
+					<div class="item-main">
+						<div class="artist" v-html="item.artist"></div>
+						<div class="song" v-html="item.title"></div>
+					</div>
+					<div class="item-info total">{{item.artist_total}}</div>
+					<div class="item-info top100">{{item.songs}}</div>
+				</div>
+			</template>
+	     </div>
 	    </div>
 	    <input type="file" id="pl_file" style="display:none;"/>
+	     <script type="text/javascript" src="vue-2.5.13.js"></script>
 	    <script type="text/javascript" src="jquery.min.3.1.1.js"></script>
 	    <script type="text/javascript" src="moment.min.2.18.1.js"></script>
 	    <script type="text/javascript" src="sweetalert2.min.js"></script>
 	    <script type="text/javascript" src="pl-calendar.js?r=180720172015"></script>
-	    <script type="text/javascript" src="playlist.main.js?r=2"></script>
-	    <script type="text/javascript" src="playlist.model.js?r=040920171921"></script>
-	    <script type="text/javascript" src="playlist.view.js?r=040920171853"></script>
-	    <script type="text/javascript" src="main.js?r=2"></script>	
+	    <script type="text/javascript" src="playlist.model.js?r=040920171921"></script>	
 	</body>
 </html>
