--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<link rel="stylesheet" type="text/css" href="playlist2.css?r=010220182120" />
     	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=310720172120" />
     	<link rel="stylesheet" type="text/css" href="sweetalert2.min.css" />
+    	<link rel="stylesheet" type="text/css" href="vue-datetime.css" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     	<link rel="icon" href="pl-favicon.png" type="image/png"/>
     </head>
@@ -23,7 +24,8 @@
 			</div>
 			<div class="date-block">
 				<div class="pl-prev menu-item" v-on:click="move('left')"></div>
-				<input id="pl_date" v-model="formatDate" v-if="mode == 'main'" readonly></input>
+				<!--<input id="pl_date" v-model="formatDate" v-if="mode == 'main'" readonly></input>-->
+				<datetime id="pl_date" v-model="actual_date" v-on:change="getPlaylist(actual_date)" v-if="mode == 'main'"></datetime>
 				<select id="pl_year" v-if="mode == 'top100' || mode == 'top10artists'" v-model="top100year" v-on:change="change_year()">
 					<option v-for="year in years_array" :value="year">{{year}}</option>
 				</select>
@@ -33,9 +35,9 @@
 			<div class="pl-upload menu-item" title="Add playlist" v-on:click="openfile()"></div>
 	     </div>
 	     <div id="playlist-content" class="list" v-bind:class="{ list : true, 'pl-loading' : loading}">
-			<template v-if="!loading && storage[actual_date] && mode == 'main'">
+			<template v-if="!loading && storage[actualDate] && mode == 'main'">
 				<div class="list-title">A List</div>
-				<template v-for="item in storage[actual_date]">
+				<template v-for="item in storage[actualDate]">
 					<div class="list-item" v-if="item.score == 47">
 						<div v-bind:class="['item-info', itemInfoClass(item) ? itemInfoClass(item) : '']"></div>
 						<div class="item-main">
@@ -45,7 +47,7 @@
 					</div>
 				</template>
 				<div class="list-title">B List</div>
-				<template v-if="storage[actual_date]" v-for="item in storage[actual_date]">
+				<template v-if="storage[actualDate]" v-for="item in storage[actualDate]">
 					<div class="list-item" v-if="item.score == 28">
 						<div v-bind:class="['item-info', itemInfoClass(item) ? itemInfoClass(item) : '']"></div>
 						<div class="item-main">
@@ -55,7 +57,7 @@
 					</div>
 				</template>
 				<div class="list-title">C List</div>
-				<template v-if="storage[actual_date]" v-for="item in storage[actual_date]">
+				<template v-if="storage[actualDate]" v-for="item in storage[actualDate]">
 					<div class="list-item" v-if="item.score == 23">
 						<div v-bind:class="['item-info', itemInfoClass(item) ? itemInfoClass(item) : '']"></div>
 						<div class="item-main">
@@ -91,6 +93,8 @@
 	    </div>
 	    
 	    <script type="text/javascript" src="vue-2.5.13.js"></script>
+	    <script type="text/javascript" src="luxon.min.js"></script>
+	    <script type="text/javascript" src="vue-datetime.js"></script>
 	    <script type="text/javascript" src="jquery.min.3.1.1.js"></script>
 	    <script type="text/javascript" src="moment.min.2.18.1.js"></script>
 	    <script type="text/javascript" src="sweetalert2.min.js"></script>
