--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="left-menu" v-if="showLeftMenu">
 				<div class="lm-item menu-item" v-on:click="latest()">Latest</div>
 				<div class="lm-item menu-item" v-on:click="current()">Current</div>
-				<div class="lm-item menu-item" v-on:click="archive()">Archive</div>
+				<div class="lm-item menu-item" v-on:click="archive">Archive</div>
 				<div class="lm-item menu-item" v-on:click="openfile()">Add</div>
 				<div class="lm-item menu-item" v-on:click="top100()">Top 100</div>
 				<div class="lm-item menu-item" v-on:click="top10artists()">Top 10 Artists</div>
@@ -25,11 +25,11 @@
 			<div class="date-block">
 				<div class="pl-prev menu-item" v-on:click="move('left')"></div>
 				<!--<input id="pl_date" v-model="formatDate" v-if="mode == 'main'" readonly></input>-->
-				<datetime id="pl_date" v-model="actual_date" v-if="mode == 'main'"></datetime>
+				<datetime id="pl_date" v-model="actual_date" ref="picker" v-if="mode == 'main'"></datetime>
 				<select id="pl_year" v-if="mode == 'top100' || mode == 'top10artists'" v-model="top100year">
 					<option v-for="year in years_array" :value="year">{{year}}</option>
 				</select>
-				<div class="pl-calendar menu-item"></div>
+				<div class="pl-calendar menu-item" v-on:click="archive"></div>
 				<div class="pl-next menu-item" v-on:click="move('right')"></div>
 			</div>
 			<div class="pl-upload menu-item" title="Add playlist" v-on:click="openfile()"></div>
