--- a/index.html
+++ b/index.html
@@ -60,6 +60,35 @@
 					@delete="delete_playlist">
 			</modal>
 		</div>
+
+		<script type="x/template" id="playlist">
+			<div>
+				<sublist v-bind:list="list" v-bind:score="47" v-bind:title="'A-List'"></sublist>
+				<sublist v-bind:list="list" v-bind:score="28" v-bind:title="'B-List'"></sublist>
+				<sublist v-bind:list="list" v-bind:score="23" v-bind:title="'C-List'"></sublist>
+			</div>
+		</script>
+
+		<script type="x/template" id="sublist">
+			<div>
+				<div class="list-title">{{title}}</div>
+				<song v-for="item in list" v-if="item.score == score" v-bind:item="item" v-bind:mode="'main'"></song>
+			</div>
+		</script>
+
+		<script type="x/template" id="song">
+			<div class="list-item">
+				<div v-if="mode=='main'" v-bind:class="['item-info', item.item_class ? item.item_class : '']"></div>
+				<div v-if="mode!='main'" class="item-info top100">{{num + 1}}</div>
+				<div v-bind:class="['item-main', mode=='main'? 'item-mr' : '']">
+					<div class="artist" v-html="item.artist"></div>
+					<div class="song" v-html="item.title"></div>
+				</div>
+				<div class="item-info total" v-if="mode=='top100'">{{item.total}}</div>
+				<div class="item-info total" v-if="mode=='top10artists'">{{item.artist_total}}</div>
+				<div class="item-info top100" v-if="mode=='top10artists'">{{item.songs}}</div>
+			</div>
+		</script>
 		
 		<script type="x/template" id="modal-template">
 			<transition name="modal">
