--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
     <head>
     	<title>Playlist</title>
     	<link rel="stylesheet" type="text/css" href="playlist2.css?r=010220182120" />
-    	<link rel="stylesheet" type="text/css" href="pl-calendar.css?r=310720172120" />
-    	<link rel="stylesheet" type="text/css" href="sweetalert2.min.css" />
 		<link rel="stylesheet" type="text/css" href="vue-datetime.css" />
 		<link rel="stylesheet" type="text/css" href="modal.css" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -25,7 +23,6 @@
 			</div>
 			<div class="date-block">
 				<div class="pl-prev menu-item" v-on:click="move('left')"></div>
-				<!--<input id="pl_date" v-model="formatDate" v-if="mode == 'main'" readonly></input>-->
 				<datetime id="pl_date" v-model="actual_date" ref="picker" v-if="mode == 'main'"></datetime>
 				<select id="pl_year" v-if="mode == 'top100' || mode == 'top10artists'" v-model="top100year">
 					<option v-for="year in years_array" :value="year">{{year}}</option>
@@ -127,8 +124,6 @@
 	    <script type="text/javascript" src="vue-datetime.js"></script>
 	    <script type="text/javascript" src="jquery.min.3.1.1.js"></script>
 	    <script type="text/javascript" src="moment.min.2.18.1.js"></script>
-	    <script type="text/javascript" src="sweetalert2.min.js"></script>
-	    <script type="text/javascript" src="pl-calendar.js?r=180720172015"></script>
-	    <script type="text/javascript" src="playlist.model.js?r=170520181650"></script>	
+	    <script type="text/javascript" src="playlist.js?r=170520181650"></script>	
 	</body>
 </html>
